--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,57 @@ android {
 }
 
 dependencies {
+    def lastestMaterialDrawerRelease = '6.1.2'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // mikepenz/MaterialDrawer
+    // https://github.com/mikepenz/MaterialDrawer/tree/v6.1.2
+    implementation "com.mikepenz:materialdrawer:${lastestMaterialDrawerRelease}"
+    // implementation "com.mikepenz:materialdrawer-nav:${lastestMaterialDrawerRelease}"
+    // implementation "com.mikepenz:materialdrawer-iconics:${lastestMaterialDrawerRelease}"
+    implementation "androidx.annotation:annotation:1.1.0"
+
+    // https://github.com/mikepenz/Android-Iconics/tree/v3.2.5
+    // the core iconcis library (without any widgets)
+    implementation "com.mikepenz:iconics-core:3.2.5"
+    // this adds all ui view widgets (IconicsButton, IconicsImageView, ...)
+    implementation "com.mikepenz:iconics-views:3.2.5"
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
+
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.google.android:flexbox:2.0.1'
+
+    // https://github.com/donkingliang/ConsecutiveScrollerc
+    implementation 'com.github.donkingliang:ConsecutiveScroller:4.4.0'
+
+    // https://github.com/siyamed/android-shape-imageview
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+
+    // https://github.com/ksoichiro/Android-ObservableScrollView/blob/master/docs/quick-start/animation.md
+    implementation 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "androidx.appcompat") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "1.+"
+            }
+        }
+    }
 }
